# advent-of-code

./: README.md
.githooks/: pre-commit
2018/: Cargo.toml
2018/src/: day_03_part1.rs  day_03_part2.rs  day_04_part1.rs  day_04_part2.rs  day_06_part1.rs  day_06_part2.rs  day_07_part1.rs  day_07_part2.rs  day_09_part1.rs  day_09_part2.rs  day_10_part1.rs  day_10_part2.rs  day_11_part1.rs  day_11_part2.rs  day_13_part1.rs  day_13_part2.rs  day_14_part1.rs  day_14_part2.rs  day_15_part1.rs  day_15_part2.rs  day_17_part1.rs  day_17_part2.rs  day_18_part1.rs  day_18_part2.rs  day_20_part1.rs  day_20_part2.rs  day_21_part1.rs  day_21_part2.rs  day_22_part1.rs  day_22_part2.rs  day_23_part2.rs  lib.rs
2020/: Cargo.toml
2022/: Cargo.toml  README.md
2022/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  lib.rs
2023/: Cargo.toml  README.md
2023/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  lib.rs
2024/: Cargo.toml  README.md
2024/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  lib.rs
common/: Cargo.toml
tools/: auto_bench.py  time.py
(+94 files in other folders)
