[package]
name = "advent_of_code_2024"
version = "0.1.0"
authors = ["schteve <stevenheindel@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
common = { version = "0.1.0", path = "../common" }
hashbag = "0.1.12"
regex = "1.11.1"
